--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -2,5 +2,5 @@
 FROM nginx:stable-alpine
 
 # Add nginx config
-ADD nginx.conf.convox /etc/nginx/nginx.conf
+ADD nginx.conf.convox /etc/nginx/conf.d/default.conf
 
